implement logout redirection

--- a/internal/templates/shared/layout.templ
+++ b/internal/templates/shared/layout.templ
@@ -2,7 +2,7 @@ package shared
 
 templ Base(title string, content templ.Component) {
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
